--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -29,4 +29,4 @@ jobs:
           context: Server
           platforms: linux/amd64,linux/arm64
           push: true
-          tags: user/app:latest
+          tags: phirestalker/phire-remotely:latest
