--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v5
         with:
-          context: Server/Dockerfile
+          context: /Server/Dockerfile
           platforms: linux/amd64,linux/arm64
           push: true
           tags: phirestalker/phire-remotely:latest
