--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -18,6 +18,8 @@ jobs:
 #        uses: docker/setup-qemu-action@v3
 #      - name: Set up Docker Buildx
 #        uses: docker/setup-buildx-action@v3
+      - name: Build app
+        run: dotnet publish --configuration Release --ucr
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
