--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -18,7 +18,12 @@ jobs:
 #        uses: docker/setup-qemu-action@v3
 #      - name: Set up Docker Buildx
 #        uses: docker/setup-buildx-action@v3
+      - name: Setup dotnet 7
+        uses: actions/setup-dotnet@v3
+        with:
+          dotnet-version: '7.x'
       - name: Build app
+        workdir: ./Server
         run: dotnet publish --configuration Release --ucr
       - name: Login to Docker Hub
         uses: docker/login-action@v3
