--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -23,8 +23,8 @@ jobs:
         with:
           dotnet-version: '7.x'
       - name: Build app
-        workdir: ./Server
         run: dotnet publish --configuration Release --ucr
+          working-directory: ./Server
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
