--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -11,6 +11,8 @@ on:
 jobs:
   docker-arm:
     runs-on: ARM64
+    env:
+      DOTNET_INSTALL_DIR: "/tmp/dotnet"
     steps:
       - name: Checkout
         uses: actions/checkout@v4
