--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -24,6 +24,9 @@ jobs:
         uses: actions/setup-dotnet@v3
         with:
           dotnet-version: '7.x'
+      - name: run dotnet restore
+        working-directory: ./Server
+        run: dotnet restore
       - name: Build app
         working-directory: ./Server
         run: dotnet publish --configuration Release --ucr
