--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -28,8 +28,8 @@ jobs:
         working-directory: ./Server
         run: dotnet restore
       - name: Build app
-        working-directory: ./Server
-        run: dotnet publish --configuration Release --ucr
+#        working-directory: ./Server
+        run: dotnet publish ./Server/Server.csproj --configuration Release --ucr
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
